--- a/todo.txt
+++ b/todo.txt
@@ -1,1 +1,1 @@
-Add multiple request support (the bot currently just doesn't respond to anything when busy)
+Add multiple request support (the bot currently just doesn't respond to anything when busy) | Use threads lol
